--- a/templates/registration/rest_detail.html
+++ b/templates/registration/rest_detail.html
@@ -1,17 +1,12 @@
 {% extends 'registration/base.html' %}
-
-
 {% block title %}
-{{ restaurant.rname }}
+{{ Restaurant.rname }}
 {% endblock %}
 {% block content %}
-{% for food in restaurant.food_set.all  %}
-
+ijhi
+{% for food in Restaurant.food_set.all  %}
+hv gyhv
 <h1>  {{ food.fname }} </h1>
 <h4> {{ food.fmoney }}</h4>
-
-
-
-
 {% endfor %}
 {% endblock %}
